--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,16 @@
 {
-    "version":2,
-    "builds":[
-        {
-            "src":"index.js",
-            "use":"@vercel/node"
-        } 
+    "version": 2,
+    "builds": [
+      {
+        "src": "./index.js",
+        "use": "@vercel/node"
+      }
     ],
-    "routes":[
-        {
-            "src":"/(index.js)",
-            "dest":"/"
-        }
+    "routes": [
+      
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
     ]
-}
+  }
