--- a/client/package.json
+++ b/client/package.json
@@ -5,18 +5,25 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@react-three/drei": "^9.93.1",
+    "@react-three/fiber": "^8.15.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "framer-motion": "^10.18.0",
     "grommet": "^2.34.2",
     "grommet-icons": "^4.12.0",
+    "lamina": "^1.1.23",
+    "leva": "^0.9.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "tailwindcss": "^3.4.1",
+    "three": "^0.160.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
