--- a/client/package.json
+++ b/client/package.json
@@ -3,26 +3,49 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
+    "@heroicons/react": "2.0",
+    "@material-tailwind/react": "^2.1.8",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@react-three/drei": "^9.93.1",
     "@react-three/fiber": "^8.15.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "class-variance-authority": "^0.7.0",
+    "cmdk": "^0.2.0",
+    "date-fns": "^3.3.0",
+    "emoji-mart": "^5.5.2",
+    "emoji-picker-react": "^4.6.13",
     "framer-motion": "^10.18.0",
     "grommet": "^2.34.2",
     "grommet-icons": "^4.12.0",
     "lamina": "^1.1.23",
     "leva": "^0.9.35",
     "react": "^18.2.0",
+    "react-cookie": "^7.0.1",
+    "react-datepicker": "^4.25.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-emoji-picker": "^1.0.13",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.10.4",
     "styled-components": "^5.3.5",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-scrollbar": "^0.1.0",
     "three": "^0.160.0",
     "web-vitals": "^2.1.4"
   },
